# nag_a_ram

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  createCSS.sh
includes/: README.md  loader.h
layouts/: darksheets.css  mainWindow.glade  mainWindow.xml  mainWindow.xml~  materia-light.css  stylesheets.css
plugins/: createPlugins.sh
plugins/AnagramSolver/: tSolver.c
plugins/ArkaPlugin/: forward_list.h  hash_table.c  solver.c
plugins/EfficientAnagramSolver/: hash_table.h  libs.txt
plugins/LinearSolver/: forward_list.h  hash_table.h  libs.txt  solver.c
plugins/bruteforceAnagram/: bfa.c  createPlugin.sh
plugins/hashCrack/: libs.txt  main.c
plugins/testPlugin/: createPlugin.sh  sameName.c
src/: loader.c  main.c  mainWindow.glade
wordlists/: smallwordlist.txt
